ch9/ch9-start-another-alternative/iac-macro-usage/tests/fails/no_lambda_for_event.rs
use iac_macro::iac;

fn main() {
    iac! {
        bucket uniquename =>
    }
}
