ch9/ch9-start-another-alternative/iac-macro-usage/tests/fails/no_lambda_for_event.stderr
error: a lambda is required for an event ('=>')
 --> tests/fails/no_lambda_for_event.rs:4:5
  |
4 | /     iac! {
5 | |         bucket uniquename =>
6 | |     }
  | |_____^
  |
  = note: this error originates in the macro `iac` (in Nightly builds, run with -Z macro-backtrace for more info)
